# causal-commutative-arrows-revisited

./: .gitignore  Dockerfile  README.md  cca.cabal
src/: Reduction.hs
src/Control/CCA/: Instances.hs
test/: Main.hs  Play.hs  Sample.hs  SampleTH.hs  SigFun.hs  Sound.hs  SoundAux.hs  SoundFun.hs  SoundTH.hs  all-in-one.hs  flute.hs  flute_euterpea.hs  sound.hs  sound_euterpea.hs
