Name:           cca
Version:        0.0.1
Build-Type:     Simple
License:        MIT
Cabal-version:  >= 1.8
Author:         Jeremy Yallop <yallop@gmail.com>

library
  build-depends:   base
  exposed-modules: Control.CCA.Instances
  ghc-options:     -O2 -funfolding-use-threshold=512
  Hs-Source-Dirs:  src

Executable flute
  build-depends:  cca, base, CCA, template-haskell, HCodecs, array, random
  Main-is:        flute.hs
  ghc-options:    -O2 -funfolding-use-threshold=1024 -fno-full-laziness
  Hs-Source-Dirs: test

Executable flute_euterpea
  build-depends:  base, template-haskell, HCodecs, array, random, arrows
  Main-is:        flute_euterpea.hs
  ghc-options:    -O2 
  Hs-Source-Dirs: test

Executable test
  build-depends:  criterion, cca, base, CCA, template-haskell
  Main-is:        Main.hs
  ghc-options:    -O2 -funfolding-use-threshold=512 -fno-full-laziness
  Hs-Source-Dirs: test
