Name:           cca
Version:        0.0.1
Build-Type:     Simple
License:        MIT
Cabal-version:  >= 1.8
Author:         Jeremy Yallop <yallop@gmail.com>

library
  build-depends:   CCA, base, hermit, kure, transformers, ghc, ghc-prim, containers
  exposed-modules: Control.CCA.Instances, Reduction
  ghc-options:     -O2 -funfolding-use-threshold=512
  Hs-Source-Dirs:  src

Executable play
  build-depends:  cca, base, CCA, template-haskell, HCodecs, array, mersenne-random-pure64
  Main-is:        Play.hs
  ghc-options:    -O2 -funfolding-use-threshold=512
  Hs-Source-Dirs: test

Executable test
  build-depends:  criterion, cca, base, CCA, template-haskell
  Main-is:        Main.hs
  ghc-options:    -O2 -funfolding-use-threshold=512 -fno-full-laziness
  Hs-Source-Dirs: test
